[smop] starting to apply "every value is a list of itself" on array
git-svn-id: http://svn.pugscode.org/pugs@22268 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -100,8 +100,8 @@ compile_sm0p (${sm0p_file})
 endforeach()
 
 foreach (ri_file
-    src/smop_s1p_itemcontext.ri
-    src/smop_s1p_itemrwcontext.ri
+#    src/smop_s1p_itemcontext.ri
+#    src/smop_s1p_itemrwcontext.ri
 )
 compile_ri (${ri_file})
 endforeach()
@@ -142,8 +142,8 @@ add_library (smop
     src/smop_slime_frame.c
     src/smop_slime_node.c
     src/smop_ri.c
-    src/smop_s1p_itemcontext.c
-    src/smop_s1p_itemrwcontext.c
+#    src/smop_s1p_itemcontext.c
+#    src/smop_s1p_itemrwcontext.c
 )
 
 file (MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test)
