[smop] IO RI converted to the RI DSL
git-svn-id: http://svn.pugscode.org/pugs@22270 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -100,8 +100,7 @@ compile_sm0p (${sm0p_file})
 endforeach()
 
 foreach (ri_file
-#    src/smop_s1p_itemcontext.ri
-#    src/smop_s1p_itemrwcontext.ri
+    src/smop_s1p_io.ri
 )
 compile_ri (${ri_file})
 endforeach()
