[smop] the leaks are still there, but now array iterator is working...
git-svn-id: http://svn.pugscode.org/pugs@22272 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -128,6 +128,7 @@ add_library (smop
     src/smop_s1p_code.c
     src/smop_s1p_map.c
     src/smop_s1p_pureprototypehow.c
+    src/smop_s1p_emptylist.c
     src/smop_s1p_bindcapturesignature.c
     src/smop_s1p_defaultblocksignature.c
     src/smop_s1p_hash.c
