--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -185,6 +185,7 @@ foreach (test_file
     test/31_int_postfix_plusplus.m0ld
     test/32_array_iterator.m0ld
     test/33_pugs_simple.p6-pugs
+    test/34_array_unshift.m0ld
 )
     set(c_file)
     if (test_file MATCHES "\\.sm0p$")
