[elfish/on_sbcl] Added basic OO.  Fleshing out language features. PrimitivesSBCL.pm has grown to include the elf_g Prelude. Progress on download and compilation of as yet unused CL libraries. README updated.
git-svn-id: http://svn.pugscode.org/pugs@22308 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/on_sbcl/Makefile
+++ b/misc/elfish/on_sbcl/Makefile
@@ -1,10 +1,47 @@
 
-elfx::
+
+elfx:: have_parser_cache
 	ELF_STD_RED_RUN=../../STD_red/STD_red_run ../../elf/elf_g -x -o ./elfx -I ../../elf/elf_g_src Elf_SBCL.pm
 
-# Download the CL-PPCRE regexp library.
-# http://www.weitz.de/cl-ppcre/
-cl-ppcre:
-	wget http://weitz.de/files/cl-ppcre.tar.gz
-	tar xzf cl-ppcre.tar.gz
-	mv cl-ppcre-* cl-ppcre
+#XXX no main() call yet, so CommandLine must come after last file...
+# but doesnt here.
+#	ELF_STD_RED_RUN=../../STD_red/STD_red_run ../../elf/elf_g -x -o ./elfx -I ../../elf/elf_g_src Elf.pm EmitSBCL.pm
+
+
+
+have_parser_cache:
+	@perl -we 'if(!-d shift){print STDERR "\nDefine STD_RED_CACHEDIR for faster compiles.\n\n";}' $(STD_RED_CACHEDIR)
+
+
+clean:
+	rm -rf lib-cl/tar
+	rm -rf lib-cl/site
+	rm -rf lib-cl/systems
+
+libraries:
+	-mkdir lib-cl
+	-mkdir lib-cl/tar
+	-mkdir lib-cl/site
+	-mkdir lib-cl/systems
+	(cd lib-cl/tar; wget http://common-lisp.net/project/cl-plus-ssl/download/trivial-gray-streams.tar.gz)
+	(cd lib-cl/tar; wget http://weitz.de/files/flexi-streams.tar.gz)
+	(cd lib-cl/tar; wget http://weitz.de/files/cl-interpol.tar.gz)
+	(cd lib-cl/tar; wget http://weitz.de/files/cl-unicode.tar.gz)
+	(cd lib-cl/tar; wget http://weitz.de/files/cl-ppcre.tar.gz)
+	(cd lib-cl/site; tar xzf ../tar/trivial-gray-streams.tar.gz)
+	(cd lib-cl/site; tar xzf ../tar/flexi-streams.tar.gz)
+	(cd lib-cl/site; tar xzf ../tar/cl-interpol.tar.gz)
+	(cd lib-cl/site; tar xzf ../tar/cl-unicode.tar.gz)
+	(cd lib-cl/site; tar xzf ../tar/cl-ppcre.tar.gz)
+	(cd lib-cl/site; mv trivial-gray-streams* trivial-gray-streams)
+	(cd lib-cl/site; mv flexi-streams* flexi-streams)
+	(cd lib-cl/site; mv cl-interpol* cl-interpol)
+	(cd lib-cl/site; mv cl-unicode* cl-unicode)
+	(cd lib-cl/site; mv cl-ppcre* cl-ppcre)
+	(cd lib-cl/systems; ln -s ../site/trivial-gray-streams/trivial-gray-streams.asd)
+	(cd lib-cl/systems; ln -s ../site/flexi-streams/flexi-streams.asd)
+	(cd lib-cl/systems; ln -s ../site/cl-interpol/cl-interpol.asd)
+	(cd lib-cl/systems; ln -s ../site/cl-unicode/cl-unicode.asd)
+	(cd lib-cl/systems; ln -s ../site/cl-ppcre/cl-ppcre.asd)
+	./lib-cl_compile.lisp
+
