[pugs] evaling code in the embedded smop works
git-svn-id: http://svn.pugscode.org/pugs@22338 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/Pugs.cabal.in
+++ b/Pugs.cabal.in
@@ -179,7 +179,8 @@ executable pugs
         cpp-options: -DPUGS_HAVE_PERL5=1
 
     if flag(SMOP)
-        extra-Libraries: smop
+        extra-libraries: smop
+        extra-lib-dirs: v6/smop/build
         cpp-options: -DPUGS_HAVE_SMOP=1
 
     c-sources:
