[smop] removed test 33 from the default test target
git-svn-id: http://svn.pugscode.org/pugs@22345 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -186,7 +186,7 @@ foreach (test_file
     test/30_array_map.m0ld
     test/31_int_postfix_plusplus.m0ld
     test/32_array_iterator.m0ld
-    test/33_pugs_simple.p6-pugs
+    # test/33_pugs_simple.p6-pugs # would require building pugs twice
     test/34_array_unshift.m0ld
     test/35_array_grep.m0ld
 )
