[on_sbcl] Boxed strings and integers.  Also "", 0, etc, now false. [elf_h] Elf source tweak - a miscalled fixed-arity sub.
git-svn-id: http://svn.pugscode.org/pugs@22465 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/elf_h_src/Makefile
+++ b/misc/elf/elf_h_src/Makefile
@@ -34,4 +34,4 @@ bootstrap:
 	diff ../elf_h1 ../elf_h2
 
 have_parser_cache:
-	@perl -we 'if(!-d shift){print STDERR "\nDefine STD_RED_CACHEDIR for faster compiles.\n\n";}' $(STD_RED_CACHEDIR)
+	@perl -e 'if(!-d shift){print STDERR "\nDefine STD_RED_CACHEDIR for faster compiles.\n\n";}' $(STD_RED_CACHEDIR)
