[smop] preparing to implement preludescope.
git-svn-id: http://svn.pugscode.org/pugs@22507 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -97,6 +97,7 @@ foreach (sm0p_file
     src/smop_s1p_map.sm0p
     src/smop_s1p_grep.sm0p
     src/smop_s1p_array_iterator.sm0p
+    src/smop_s1p_preludescope.sm0p
 )
 compile_sm0p (${sm0p_file})
 endforeach()
@@ -141,6 +142,7 @@ add_library (smop
     src/smop_s1p_root_namespace.c
     src/smop_s1p_scalar.c
     src/smop_s1p_str.c
+    src/smop_s1p_preludescope.c
     src/smop_slime_capturize.c
     src/smop_slime_currentframe.c
     src/smop_slime_frame.c
