[elfish/on_sbcl] elfcl runs fib.
git-svn-id: http://svn.pugscode.org/pugs@22522 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/on_sbcl/Makefile
+++ b/misc/elfish/on_sbcl/Makefile
@@ -1,13 +1,15 @@
 
+ELF=../../elf/elf_h
+ELFDIR=../../elf/elf_h_src
+TMP=deleteme
+SBCL=sbcl --dynamic-space-size 1800
 
 elfx:: have_parser_cache
-	ELF_STD_RED_RUN=../../STD_red/STD_red_run ../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src Elf_SBCL.pm
+	ELF_STD_RED_RUN=../../STD_red/STD_red_run ../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src -e 'use Elf_wo_main' EmitSBCL.pm -e elf_main
 
-#XXX no main() call yet, so CommandLine must come after last file...
-# but doesnt here.
-#	ELF_STD_RED_RUN=../../STD_red/STD_red_run ../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src Elf.pm EmitSBCL.pm
-
-
+elfcl:: have_parser_cache
+	${ELF} -I ${ELFDIR} EmitSBCL.pm -x -o elfcl Elf_SBCL.pm
+	time ${SBCL} --eval '(compile-file "elfcl")' --eval '(quit)' >& elfcl.out
 
 have_parser_cache:
 	@perl -we 'if(!-d shift){print STDERR "\nDefine STD_RED_CACHEDIR for faster compiles.\n\n";}' $(STD_RED_CACHEDIR)
@@ -45,3 +47,22 @@ libraries:
 	(cd lib-cl/systems; ln -s ../site/cl-ppcre/cl-ppcre.asd)
 	./lib-cl_compile.lisp
 
+check: have_parser_cache
+	-mkdir ${TMP}
+	-rm ${TMP}/[ab]*
+	# Create a p5 elf.
+	${ELF} -I ${ELFDIR} -x -o ${TMP}/a0 ${ELFDIR}/Elf.pm
+	# Create a CL elf.
+	${ELF} -I ${ELFDIR} EmitSBCL.pm -x -o ${TMP}/b0 Elf_SBCL.pm
+	# Compile it, with output to log.
+	${SBCL} --disable-debugger --eval '(compile-file "${TMP}/b0")' --eval '(quit)' > ${TMP}/b0.log 2>&1
+	# Run it.
+	chmod a+x ${TMP}/b0
+	${TMP}/b0 -e 'say 3'
+	# Check CL bootstrap.
+	${TMP}/b0 -I ${ELFDIR} -x -o ${TMP}/b1 Elf_SBCL.pm
+	diff ${TMP}/b0 ${TMP}/b1
+	# Compile a p5 elf with a CL one.
+	${TMP}/b0 -I ${ELFDIR} -e 'use EmitSimpleP5' -x -o ${TMP}/a1 -e 'use Elf'
+	# Was it identical?
+	diff ${TMP}/a0 ${TMP}/a1
