[elfish/on_sbcl] Still struggling towards self compilation. [elf_h] Tweaks.
git-svn-id: http://svn.pugscode.org/pugs@22528 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/on_sbcl/Makefile
+++ b/misc/elfish/on_sbcl/Makefile
@@ -10,6 +10,7 @@ elfx:: have_parser_cache
 elfcl:: have_parser_cache
 	${ELF} -I ${ELFDIR} EmitSBCL.pm -x -o elfcl Elf_SBCL.pm
 	time ${SBCL} --eval '(compile-file "elfcl")' --eval '(quit)' >& elfcl.out
+	chmod a+x elfcl
 
 have_parser_cache:
 	@perl -we 'if(!-d shift){print STDERR "\nDefine STD_RED_CACHEDIR for faster compiles.\n\n";}' $(STD_RED_CACHEDIR)
