[smop] first sketch on the test for multi subs
git-svn-id: http://svn.pugscode.org/pugs@22548 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -196,6 +196,7 @@ foreach (test_file
     test/34_array_unshift.m0ld
     test/35_array_grep.m0ld
     test/36_adhoc_signature.m0ld
+    test/37_multisub.m0ld
     test/38_ritest.m0ld
 )
     set(c_file)
