[elfish/on_sbcl]  Self-compiles. Undef and bool boxing.  Dispatch and misc fixes.  Slower. Doesn't quite compile the p5 version. [STD_red] Improved --format=cl string and nil dumping. [elf_h] Yet more missing argument fixes.
git-svn-id: http://svn.pugscode.org/pugs@22560 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/on_sbcl/Makefile
+++ b/misc/elfish/on_sbcl/Makefile
@@ -9,7 +9,7 @@ elfx:: have_parser_cache
 
 elfcl:: have_parser_cache
 	${ELF} -I ${ELFDIR} EmitSBCL.pm -x -o elfcl Elf_SBCL.pm
-	time ${SBCL} --eval '(compile-file "elfcl")' --eval '(quit)' >& elfcl.out
+	/usr/bin/time ${SBCL} --eval '(compile-file "elfcl")' --eval '(quit)' >& elfcl.out
 	chmod a+x elfcl
 
 have_parser_cache:
@@ -55,15 +55,16 @@ check: have_parser_cache
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/a0 ${ELFDIR}/Elf.pm
 	# Create a CL elf.
 	${ELF} -I ${ELFDIR} EmitSBCL.pm -x -o ${TMP}/b0 Elf_SBCL.pm
-	# Compile it, with output to log.
+	# Compile the CL elf.
 	${SBCL} --disable-debugger --eval '(compile-file "${TMP}/b0")' --eval '(quit)' > ${TMP}/b0.log 2>&1
-	# Run it.
+	# Run the CL elf.
 	chmod a+x ${TMP}/b0
-	${TMP}/b0 -e 'say 3'
-	# Check CL bootstrap.
-	${TMP}/b0 -I ${ELFDIR} -x -o ${TMP}/b1 Elf_SBCL.pm
+	${TMP}/b0 -e 'say "hello"' 2>/dev/null
+	# Check bootstrap - CL elf compiles a CL elf.
+	${TMP}/b0 -I ${ELFDIR} -x -o ${TMP}/b1 Elf_SBCL.pm 2>/dev/null
+	# Was it identical?
 	diff ${TMP}/b0 ${TMP}/b1
-	# Compile a p5 elf with a CL one.
-	${TMP}/b0 -I ${ELFDIR} -e 'use EmitSimpleP5' -x -o ${TMP}/a1 -e 'use Elf'
+	# Check cross-bootstrap - CL elf compiles a P5 elf.
+	${TMP}/b0 -I ${ELFDIR} -e 'use EmitSimpleP5' -x -o ${TMP}/a1 -e 'use Elf' 2>/dev/null
 	# Was it identical?
 	diff ${TMP}/a0 ${TMP}/a1
