[elfish/rx_on_re] Update to elf_h.  Dust README.  Delete obsolete EmitRegexYare.pm.  Fixed a bogus classname.
git-svn-id: http://svn.pugscode.org/pugs@22574 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/rx_on_re/Makefile
+++ b/misc/elfish/rx_on_re/Makefile
@@ -1,7 +1,7 @@
 
 check:
 	export ELF_STD_RED_RUN=./../../STD_red/STD_red_run
-	../../elf/elf_g test.pm > tst_1 2> tst_2
+	../../elf/elf_h test.pm > tst_1 2> tst_2
 	diff t_baseline.result tst_1
 	@echo ok
 
