[elfish/STD_blue] Update for elf_h. [elf_h] eval_perl5 restored for rx_on_re (commit forgotten recently).
git-svn-id: http://svn.pugscode.org/pugs@22589 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_blue/Makefile
+++ b/misc/elfish/STD_blue/Makefile
@@ -1,3 +1,3 @@
 
 elfx::
-	ELF_STD_RED_RUN=../../STD_red/STD_red_run ../../elf/elf_g -x -o ./elfx -I ../../elf/elf_g_src Elfx.pm
+	../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src -e 'use Elf_wo_main' IRx1_FromAST2.pm Parser2.pm -e elf_main
