[elfish/STD_blue] Dropped in STD_red elf_h IRx1_FromAST constructors.  Currently adapting them to the STD_blue/gimme5 ast.  -e 'say 3' works, but little else yet.
git-svn-id: http://svn.pugscode.org/pugs@22593 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_blue/Makefile
+++ b/misc/elfish/STD_blue/Makefile
@@ -1,3 +1,4 @@
 
 elfx::
+	./IRx1_FromAST2_create.pl
 	../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src -e 'use Elf_wo_main' IRx1_FromAST2.pm Parser2.pm -e elf_main
