[smop] starting to implement multi... blocking on s1p_array.push
git-svn-id: http://svn.pugscode.org/pugs@22602 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -102,6 +102,7 @@ compile_sm0p (${sm0p_file})
 endforeach()
 
 foreach (ri_file
+    src/s1p_multi.ri
     src/s1p_io.ri
     src/s1p_lexicalscope.ri
     src/s1p_adhocsignature.ri
@@ -141,6 +142,7 @@ add_library (smop
     src/s1p_adhocsignature.c
     src/s1p_hash.c
     src/s1p_io.c
+    src/s1p_multi.c
     src/s1p_lexicalscope.c
     src/s1p_root_namespace.c
     src/s1p_scalar.c
