[smop] added lexical prelude - using $OUT is lexical HACK corrected test count in 19_array 21_code uses lexical prelude
git-svn-id: http://svn.pugscode.org/pugs@22638 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -145,6 +145,7 @@ add_library (smop
     src/s1p_multi.c
     src/s1p_lexicalscope.c
     src/s1p_root_namespace.c
+    src/s1p_lexical_prelude.c
     src/s1p_scalar.c
     src/s1p_str.c
     src/s1p_ritest.c
