[m0ld] m0ld executable now uses the M0ld module
git-svn-id: http://svn.pugscode.org/pugs@22640 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/m0ld/m0ld.cabal
+++ b/v6/smop/m0ld/m0ld.cabal
@@ -10,5 +10,5 @@ build-Depends:       base,utf8-string >= 0.3.1.1,containers >= 0.1.0.1,parsec >=
 Build-type:          Simple
 
 executable:          m0ld
-main-is:             M0ld.hs
+main-is:             m0ld.hs
 ghc-options:         
