[smop] libsmop is now a shared library (LD_LIBRARY_PATCH required when using m0ld with smop embedding)
git-svn-id: http://svn.pugscode.org/pugs@22644 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -112,7 +112,7 @@ compile_ri (${ri_file})
 endforeach()
 
 INCLUDE (FindThreads)
-add_library (smop 
+add_library (smop SHARED
     src/idconst.c
     src/lowlevel_method.c
     src/native_bool.c
