[smop] something is very bad around here... the init and destr order is causing a segfault, I am only commiting so other can help me catching this bug...
git-svn-id: http://svn.pugscode.org/pugs@22711 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -106,7 +106,7 @@ foreach (ri_file
     src/s1p_io.ri
     src/s1p_lexicalscope.ri
     src/s1p_adhocsignature.ri
-    src/s1p_bvalue.ri
+    src/s1p_hash_bvalue.ri
     src/proto.ri
 )
 compile_ri (${ri_file})
@@ -150,7 +150,7 @@ add_library (smop SHARED
     src/s1p_scalar.c
     src/s1p_str.c
     src/s1p_ritest.c
-    src/s1p_bvalue.c
+    src/s1p_hash_bvalue.c
     src/slime_capturize.c
     src/slime_currentframe.c
     src/slime_frame.c
