--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -2,7 +2,9 @@ all:
 	mkdir build;cd build;cmake ..;MAKELEVEL=0 make
 .PHONY : test all
 test: all
-	perl -MTest::Harness -e '@tests=<build/test/*.t>;$$Test::Harness::switches="-e \"system(shift)\"";runtests(@tests)'
+
+	prove -r -e 'valgrind -q' build/test
+	#perl -MTest::Harness -e '@tests=<build/test/*.t>;$$Test::Harness::switches="-e \"system(shift)\"";runtests(@tests)'
 env:
 	env
 
