--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -2,9 +2,7 @@ all:
 	mkdir build;cd build;cmake ..;MAKELEVEL=0 make
 .PHONY : test all
 test: all
-
-	prove -r -e 'valgrind -q' build/test
-	#perl -MTest::Harness -e '@tests=<build/test/*.t>;$$Test::Harness::switches="-e \"system(shift)\"";runtests(@tests)'
+	perl -MTest::Harness -e '@tests=<build/test/*.t>;$$Test::Harness::switches="-e \"system(q<valgrind -q >.shift)\"";runtests(@tests)'
 env:
 	env
 
