[smop] trying a different make test to see if that works for pmurias
git-svn-id: http://svn.pugscode.org/pugs@22732 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -2,7 +2,8 @@ all:
 	mkdir build;cd build;cmake ..;MAKELEVEL=0 make
 .PHONY : test all
 test: all
-	perl -MTest::Harness -e '@tests=<build/test/*.t>;$$Test::Harness::switches="-e \"system(q<valgrind -q >.shift)\"";runtests(@tests)'
+	prove --perl 'valgrind -q' -r build/test
+	#perl -MTest::Harness -e '@tests=<build/test/*.t>;$$Test::Harness::switches="-e \"system(q<valgrind -q >.shift)\"";runtests(@tests)'
 env:
 	env
 
