--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -92,7 +92,6 @@ foreach (sm0p_file
     src/s1p_bindcapturesignature.sm0p
     src/s1p_pureprototypehow.sm0p
     src/p6opaque.sm0p
-    src/s1p_attribute.sm0p
     src/s1p_code.sm0p
     src/s1p_map.sm0p
     src/s1p_grep.sm0p
@@ -106,6 +105,7 @@ foreach (ri_file
     src/s1p_io.ri
     src/s1p_lexicalscope.ri
     src/s1p_adhocsignature.ri
+    src/s1p_attribute.ri
     src/s1p_hash_bvalue.ri
 )
 compile_ri (${ri_file})
