[smop] hello wold works with m0ld --exec again it is a problem with BValues added BValue.DEBUG and smop_describe_object to help debugging
git-svn-id: http://svn.pugscode.org/pugs@22930 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/m0ld/m0ld.cabal
+++ b/v6/smop/m0ld/m0ld.cabal
@@ -11,11 +11,12 @@ Cabal-Version: >= 1.2
 flag SMOP
     description: Enable SMOP Embedding
     default:     False
-library
-    build-Depends:       base,utf8-string >= 0.3.1.1,containers >= 0.1.0.1,parsec >= 2.0.0.0
-
-    exposed-modules:     M0ld,M0ld.Parser,M0ld.AST
+-- library
+--    build-Depends:       base,utf8-string >= 0.3.1.1,containers >= 0.1.0.1,parsec >= 2.0.0.0
+--
+--    exposed-modules:     M0ld,M0ld.Parser,M0ld.AST -}
 executable m0ld
+    build-Depends:       base,utf8-string >= 0.3.1.1,containers >= 0.1.0.1,parsec >= 2.0.0.0
     main-is:            m0ld.hs
     if flag(SMOP)
         extra-libraries: smop
