[mildew] added test_ target for different prove version
git-svn-id: http://svn.pugscode.org/pugs@22975 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/mildew/Makefile
+++ b/v6/mildew/Makefile
@@ -3,3 +3,6 @@ test:
 	rm -fr lex
 	prove -r -e 'perl mildew --exec --file' t/
 
+test_:
+	rm -fr lex
+	prove -r --perl 'perl mildew --exec --file' t/
