--- a/v6/mildew/Makefile
+++ b/v6/mildew/Makefile
@@ -1,14 +1,11 @@
-.PHONY : test
+.PHONY : prove
+
+PROVE := $(shell if prove --version | grep v2 > /dev/null 2>&1;then echo 'prove -r --perl'; else echo 'prove -r -e'; fi)
 
 test: clean prove
 
 prove:
-	prove -r -e 'perl mildew --exec --file' t/
-
-test_: clean prove_
-
-prove_:
-	prove -r --perl 'perl mildew --exec --file' t/
+	$(PROVE) 'perl mildew --exec --file' t/
 
 clean:
 	rm -rf lex
