[smop] uses the prove selection trick from mildew
git-svn-id: http://svn.pugscode.org/pugs@23009 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/Makefile
+++ b/v6/smop/Makefile
@@ -1,10 +1,9 @@
+PROVE := $(shell if prove --version | grep v2 > /dev/null 2>&1;then echo 'prove -r --perl'; else echo 'prove -r -e'; fi)
 all:
 	mkdir build;cd build;cmake ..;MAKELEVEL=0 make
 .PHONY : test all
-test_: all
-	prove -e 'valgrind -q' -r build/test
 test: all
-	prove --perl 'valgrind -q' -r build/test
+	$(PROVE) 'valgrind -q' build/test
 env:
 	env
 
