[smop] hash .exists and .{} now use a mold to implement the signature correctly building a new capture with the values in the desired context. [smop] s1p_code also does a FETCH in the first positional argument, so it now accepts a capture as a variable in postcircumfix:( )
git-svn-id: http://svn.pugscode.org/pugs@23037 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -93,6 +93,7 @@ foreach (sm0p_file
     src/s1p_bindcapturesignature.sm0p
     src/s1p_pureprototypehow.sm0p
     src/p6opaque.sm0p
+    src/s1p_hash.sm0p
     src/s1p_code.sm0p
     src/s1p_map.sm0p
     src/s1p_grep.sm0p
