[STD_blue] Improved AST gen for temp() and strings.  Working on $.e(3) variable method calls. Compiler.pm and CommandLine.pm now emit identically.  Pursuing EmitSimpleP5.pm.
git-svn-id: http://svn.pugscode.org/pugs@23079 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_blue/Makefile
+++ b/misc/elfish/STD_blue/Makefile
@@ -9,15 +9,19 @@ elfx:: have_parser_cache
 
 tst:
 	-rm ${TMP}/x?
-	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/Compiler.pm
-	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/Compiler.pm
+	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/EmitSimpleP5.pm
+	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/EmitSimpleP5.pm
 	-diff ${TMP}/x0 ${TMP}/x1
 
 regression_check:
 	-rm ${TMP}/x?
 	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/CommandLine.pm
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/CommandLine.pm
-	-diff ${TMP}/x0 ${TMP}/x1
+	diff ${TMP}/x0 ${TMP}/x1
+	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/Compiler.pm
+	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/Compiler.pm
+	diff ${TMP}/x0 ${TMP}/x1
+	@echo ok
 
 check: have_parser_cache
 	# Remove STD.pm/gimme5 cruft.
