--- a/misc/elfish/STD_blue/Makefile
+++ b/misc/elfish/STD_blue/Makefile
@@ -9,13 +9,13 @@ elfx:: have_parser_cache
 
 tst:
 	-rm ${TMP}/x?
-	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/IRx1_Analysis.pm
-	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/IRx1_Analysis.pm
-	-diff ${TMP}/x0 ${TMP}/x1
 
 pending_methodcall:
 	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/EmitSimpleP5.pm
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/EmitSimpleP5.pm
+	-diff ${TMP}/x0 ${TMP}/x1
+	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/IRx1_Analysis.pm
+	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/IRx1_Analysis.pm
 	-diff ${TMP}/x0 ${TMP}/x1
 	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/IRx1_FromAST.pm
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/IRx1_FromAST.pm
@@ -24,15 +24,9 @@ pending_methodcall:
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/IRx1_Nodes.pm
 	-diff ${TMP}/x0 ${TMP}/x1
 
-pending_other:
-	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/IRx1_Analysis.pm
-	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/IRx1_Analysis.pm
-	-diff ${TMP}/x0 ${TMP}/x1
-	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/Prelude.pm
-	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/Prelude.pm
-	-diff ${TMP}/x0 ${TMP}/x1
-
 pending_memory:
+	# parse attempt uses >3GB
+	# eg cd src/perl6; ./viv ../../misc/elf/elf_h_src/PrimitivesP5.pm
 	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/PrimitivesP5.pm
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/PrimitivesP5.pm
 	-diff ${TMP}/x0 ${TMP}/x1
@@ -50,6 +44,9 @@ regression_check:
 	diff ${TMP}/x0 ${TMP}/x1
 	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/Parser.pm
 	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/Parser.pm
+	diff ${TMP}/x0 ${TMP}/x1
+	./elfx -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/Prelude.pm
+	${ELF} -I ${ELFDIR} -x -o ${TMP}/x0 ${ELFDIR}/Prelude.pm
 	diff ${TMP}/x0 ${TMP}/x1
 	@echo ok
 
