[STD_green] Flesh out Makefile infrastructure for parsing STD.pm. [STD_blue] Adapt to STD.pm:  warn of untagged nodes, instead of dying; and clip cycles more quickly.  Doesn't dump yet.
git-svn-id: http://svn.pugscode.org/pugs@24114 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_green/Makefile
+++ b/misc/elfish/STD_green/Makefile
@@ -1,7 +1,17 @@
 
 STDBLUE=../STD_blue/STD_blue_run
+FAKEBLUE=./STD_blue_run
 STDPM=../../../src/perl6/STD.pm
-STDTREE=./STD.tree
+STDTREE=./tree
+ELFBLUE=../STD_blue/elfblue
 
-STD_tree:
-	${STDBLUE} ${STDPM} > ${STDTREE}
+tst:
+	${ELFBLUE} -v -s STD.pm
+
+setup:
+	cp ${STDPM} .
+	${STDBLUE} --format=p5a ${STDPM} > ${STDTREE}
+
+setup_blue:
+	rm -rf lex
+	cd ../STD_blue; make
