STD_blue now parses and dumps STD.pm. [STD_blue] sym bugfix. [STD_green] Simplify STD.pm parse caching.
git-svn-id: http://svn.pugscode.org/pugs@24124 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_green/Makefile
+++ b/misc/elfish/STD_green/Makefile
@@ -6,7 +6,7 @@ STDTREE=./tree
 ELFBLUE=../STD_blue/elfblue
 
 tst:
-	${ELFBLUE} -v -s STD.pm
+	ELF_STD_BLUE_RUN=`pwd`/tree_cat ${ELFBLUE} -v -s STD.pm
 
 setup:
 	cp ${STDPM} .
