[elfish/rx_on_re] Setting up to run rx_on_re/t/ through STD_blue.  It doesn't yet run, as elfblue can't yet compile the rx_on_re source files (unlike elf_h). [elfish/STD_blue] elfblue now uses STD_blue for eval(), and is still compiled in a single fast (STD_red-based) step.
git-svn-id: http://svn.pugscode.org/pugs@24135 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/STD_blue/Makefile
+++ b/misc/elfish/STD_blue/Makefile
@@ -1,13 +1,13 @@
 
 ELF=../../elf/elf_h
 ELFDIR=../../elf/elf_h_src
-ELFBLUECOMP0=-I ../../elf/elf_h_src -e 'use Elf_wo_main' IRx1_FromAST2.pm Parser2.pm -e elf_main
-ELFBLUECOMP=-I . ${ELFBLUECOMP0}
+ELFBLUEDEV=-I ../../elf/elf_h_src -e 'use Elf_wo_main' IRx1_FromAST2.pm -e '$$*ast2ir_0=$$*ast2ir_1; $$*parser0=undef' Parser2.pm -e elf_main
+ELFBLUECOMP=-I . -I ../../elf/elf_h_src -e 'use Elf_wo_main' IRx1_FromAST2.pm Parser2.pm -e elf_main
 TMP=deleteme
 
 elfblue:: have_parser_cache
 	./IRx1_FromAST2_create.pl
-	../../elf/elf_h -x -o ./elfblue ${ELFBLUECOMP0}
+	../../elf/elf_h -x -o ./elfblue ${ELFBLUEDEV}
 
 does_gimme5_memory_problem_still_exist:
 	bash -c "ulimit -v 2000000; ./elfblue -I ${ELFDIR} -x -o ${TMP}/x1 ${ELFDIR}/PrimitivesP5.pm"
