--- a/misc/elfish/rx_on_re/Makefile
+++ b/misc/elfish/rx_on_re/Makefile
@@ -4,8 +4,11 @@ check:
 	diff t_baseline.result tst_1
 	@echo ok
 
+elfx::
+	../../elf/elf_h -x -o ./elfx -I ../../elf/elf_h_src -e 'use Elf_wo_main' ../STD_blue/IRx1_FromAST2.pm -e '$$*ast2ir_0=$$*ast2ir_1; $$*parser0=undef' ../STD_blue/Parser2.pm nodes.pm analysis.pm emit5.pm -e 'sub f is p5 {"eval(q{use remains_of_Regexp_ModuleA;})"};f();' -e elf_main
+
 check_blue:
-	ELF_STD_BLUE_RUN=../STD_blue/STD_blue_run ../STD_blue/elfblue test.pm --test-blue > tst_1 2> tst_2
+	ELF_STD_BLUE_RUN=../STD_blue/STD_blue_run ./elfx test_blue.pm > tst_1 2> tst_2
 	diff t_baseline.result tst_1
 
 
